--- a/res/layout-land/launchers_layout.xml
+++ b/res/layout-land/launchers_layout.xml
@@ -84,7 +84,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:drawableLeft="@drawable/ic_launcher"
+                android:drawableLeft="@drawable/ic_about"
                 android:onClick="onAboutClick"
                 android:paddingLeft="96sp"
                 android:text="@string/about"
