--- a/res/layout/shortcuts_layout.xml
+++ b/res/layout/shortcuts_layout.xml
@@ -110,7 +110,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:drawableLeft="@drawable/ic_launcher"
+                android:drawableLeft="@drawable/ic_about"
                 android:onClick="onAboutClick"
                 android:paddingLeft="32sp"
                 android:text="@string/about"
