--- a/res/layout/launchers_layout.xml
+++ b/res/layout/launchers_layout.xml
@@ -26,54 +26,89 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-	android:weightSum="6"
+	android:weightSum="5"
 	android:gravity="center"
     >
+
+<LinearLayout
+	android:id="@+id/linearLayout2"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:orientation="horizontal"
+	android:layout_weight="2"
+>
 
 <Button
     android:id="@+id/LaunchCheckinButton"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-	android:layout_weight="1"
+    android:layout_height="fill_parent"
 	android:textSize="10pt"
     android:text="@string/CreateCheckInButtonText"
-    android:onClick="onLaunchClick" />
+    android:onClick="onLaunchClick"
+	android:paddingTop="32sp"
+	android:drawableTop="@drawable/ic_checkin"
+	android:layout_weight="1"
+/>
 
 <Button
     android:id="@+id/LaunchListButton"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-	android:layout_weight="1"
+    android:layout_height="fill_parent"
 	android:textSize="10pt"
     android:text="@string/CreateListButtonText"
-    android:onClick="onLaunchClick" />
+    android:onClick="onLaunchClick"
+	android:paddingTop="32sp"
+	android:drawableTop="@drawable/ic_list"
+	android:layout_weight="1"
+/>
+
+</LinearLayout>
+
+<LinearLayout
+	android:id="@+id/linearLayout2"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:orientation="horizontal"
+	android:layout_weight="2"
+>
 
 <Button
     android:id="@+id/LaunchHistoryButton"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-	android:layout_weight="1"
+    android:layout_height="fill_parent"
 	android:textSize="10pt"
     android:text="@string/CreateHistoryButtonText"
-    android:onClick="onLaunchClick" />
+    android:onClick="onLaunchClick"
+	android:paddingTop="32sp"
+	android:drawableTop="@drawable/ic_history"
+	android:layout_weight="1"
+/>
 
 <Button
     android:id="@+id/LaunchPlacesButton"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-	android:layout_weight="1"
+    android:layout_height="fill_parent"
 	android:textSize="10pt"
     android:text="@string/CreatePlacesButtonText"
-    android:onClick="onLaunchClick" />
+    android:onClick="onLaunchClick"
+	android:paddingTop="32sp"
+	android:drawableTop="@drawable/ic_places"
+	android:layout_weight="1"
+/>
+
+</LinearLayout>
 
 <Button
     android:id="@+id/AboutButton"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-	android:layout_weight="1"
 	android:textSize="10pt"
     android:text="@string/about"
-    android:onClick="onAboutClick" />
+    android:onClick="onAboutClick"
+	android:paddingLeft="48sp"
+	android:drawableLeft="@drawable/ic_launcher"
+	android:layout_weight="1"
+/>
 
 </LinearLayout>
 </LinearLayout>
