--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,7 +7,7 @@
 <TextView  
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
-    android:text="Hello World, LatitudeCheckIn"
+    android:text="Latitude Check In Shortcut Creator"
     />
 </LinearLayout>
 
