--- a/res/layout/shortcuts_layout.xml
+++ b/res/layout/shortcuts_layout.xml
@@ -13,7 +13,7 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:weightSum="6" >
+        android:weightSum="8" >
 
         <TableRow
             android:id="@+id/tableRow1"
@@ -85,7 +85,7 @@
             <Button
                 android:id="@+id/CreateAllButton"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/ic_all"
                 android:paddingLeft="32sp"
@@ -103,7 +103,7 @@
             <Button
                 android:id="@+id/AboutButton"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/ic_about"
                 android:paddingLeft="32sp"
