--- a/res/layout/shortcuts_layout.xml
+++ b/res/layout/shortcuts_layout.xml
@@ -4,112 +4,67 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/ShortcutsDescription"
-        android:textSize="8pt" />
+			<TextView
+                android:id="@+id/ShortcutsSetShortcutText"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:text="@string/ChooseShortcut"
+				android:textSize="8pt" />
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:weightSum="8" >
-
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="2"
-            android:weightSum="2" >
-
-            <Button
-                android:id="@+id/CreateCheckInButton"
-                android:layout_width="0dip"
+            <view
+				class="com.rgpike.latitudeshortcuts.IconButton"
+                android:id="@+id/ShortcutsSetShortcutButton"
+                android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:drawableTop="@drawable/ic_checkin"
-                android:lines="2"
-                android:paddingTop="24sp"
-                android:text="@string/CreateCheckInButtonText"
+                android:drawableLeft="@drawable/ic_all"
+                android:paddingLeft="32sp"
+                android:text="@string/WidgetChooseShortcut"
                 android:textSize="8pt" />
 
-            <Button
-                android:id="@+id/CreateListButton"
-                android:layout_width="0dip"
+			<TextView
+                android:id="@+id/ShortcutsSetIconText"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:paddingTop="8dip"
+				android:text="@string/ChooseIcon"
+				android:textSize="8pt" />
+
+			<view
+				class="com.rgpike.latitudeshortcuts.IconButton"
+                android:id="@+id/ShortcutsSetIconButton"
+				android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:drawableTop="@drawable/ic_list"
-                android:lines="2"
-                android:paddingTop="24sp"
-                android:text="@string/CreateListButtonText"
+                android:paddingLeft="32sp"
+                android:text="@string/WidgetSetIconText"
                 android:textSize="8pt" />
-        </TableRow>
 
-        <TableRow
-            android:id="@+id/tableRow2"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="2"
-            android:weightSum="2" >
+			<TextView
+                android:id="@+id/ShortcutsCreateShortcutText"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:paddingTop="8dip"
+				android:text="@string/CreateShortcut"
+				android:textSize="8pt" />
 
             <Button
-                android:id="@+id/CreateHistoryButton"
-                android:layout_width="0dip"
+                android:id="@+id/ShortcutsCreateShortcutButton"
+                android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:drawableTop="@drawable/ic_history"
-                android:lines="2"
-                android:paddingTop="24sp"
-                android:text="@string/CreateHistoryButtonText"
+                android:text="@string/WidgetCreateShortcut"
                 android:textSize="8pt" />
-
-            <Button
-                android:id="@+id/CreatePlacesButton"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:drawableTop="@drawable/ic_places"
-                android:lines="2"
-                android:paddingTop="24sp"
-                android:text="@string/CreatePlacesButtonText"
-                android:textSize="8pt" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRow3"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="2"
-            android:weightSum="1" >
 
             <Button
                 android:id="@+id/CreateAllButton"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
+				android:layout_marginTop="24sp"
                 android:drawableLeft="@drawable/ic_all"
                 android:paddingLeft="32sp"
                 android:text="@string/CreateAllButtonText"
                 android:textSize="8pt" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRow4"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="2"
-            android:weightSum="1" >
-
-            <Button
-                android:id="@+id/AboutButton"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:drawableLeft="@drawable/ic_about"
-                android:paddingLeft="32sp"
-                android:text="@string/about"
-                android:textSize="8pt" />
-        </TableRow>
-    </TableLayout>
 
 </LinearLayout>
