--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,10 +4,65 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
+
 <TextView  
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
-    android:text="Latitude Check In Shortcut Creator"
+    android:text="@string/title"
     />
+
+<TextView  
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:text="@string/Description"
+    />
+
+<Button
+    android:id="@+id/CreateCheckInButton"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+	android:layout_centerInParent="true"
+    android:text="@string/CreateCheckInButtonText"
+    android:onClick="onCreateCheckInClick" />
+
+<Button
+    android:id="@+id/CreateListButton"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+	android:layout_centerInParent="true"
+    android:text="@string/CreateListButtonText"
+    android:onClick="onCreateListClick" />
+
+<Button
+    android:id="@+id/CreateHistoryButton"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+	android:layout_centerInParent="true"
+    android:text="@string/CreateHistoryButtonText"
+    android:onClick="onCreateHistoryClick" />
+
+<Button
+    android:id="@+id/CreatePlacesButton"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+	android:layout_centerInParent="true"
+    android:text="@string/CreatePlacesButtonText"
+    android:onClick="onCreatePlacesClick" />
+
+<Button
+    android:id="@+id/CreateAllButton"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+	android:layout_centerInParent="true"
+    android:text="@string/CreateAllButtonText"
+    android:onClick="onCreateAllClick" />
+
+<Button
+    android:id="@+id/AboutButton"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+	android:layout_centerInParent="true"
+    android:text="@string/about"
+    android:onClick="onAboutClick" />
 </LinearLayout>
 
