--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,20 +8,32 @@
 <TextView  
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
+	android:textStyle="bold"
+	android:textSize="10pt"
     android:text="@string/title"
     />
 
 <TextView  
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
+	android:textSize="8pt"
     android:text="@string/Description"
     />
+
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+	android:weightSum="6"
+	android:gravity="center"
+    >
 
 <Button
     android:id="@+id/CreateCheckInButton"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-	android:layout_centerInParent="true"
+	android:layout_weight="1"
+	android:textSize="10pt"
     android:text="@string/CreateCheckInButtonText"
     android:onClick="onCreateCheckInClick" />
 
@@ -29,7 +41,8 @@
     android:id="@+id/CreateListButton"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-	android:layout_centerInParent="true"
+	android:layout_weight="1"
+	android:textSize="10pt"
     android:text="@string/CreateListButtonText"
     android:onClick="onCreateListClick" />
 
@@ -37,7 +50,8 @@
     android:id="@+id/CreateHistoryButton"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-	android:layout_centerInParent="true"
+	android:layout_weight="1"
+	android:textSize="10pt"
     android:text="@string/CreateHistoryButtonText"
     android:onClick="onCreateHistoryClick" />
 
@@ -45,7 +59,8 @@
     android:id="@+id/CreatePlacesButton"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-	android:layout_centerInParent="true"
+	android:layout_weight="1"
+	android:textSize="10pt"
     android:text="@string/CreatePlacesButtonText"
     android:onClick="onCreatePlacesClick" />
 
@@ -53,7 +68,8 @@
     android:id="@+id/CreateAllButton"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-	android:layout_centerInParent="true"
+	android:layout_weight="1"
+	android:textSize="10pt"
     android:text="@string/CreateAllButtonText"
     android:onClick="onCreateAllClick" />
 
@@ -61,8 +77,10 @@
     android:id="@+id/AboutButton"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-	android:layout_centerInParent="true"
+	android:layout_weight="1"
+	android:textSize="10pt"
     android:text="@string/about"
     android:onClick="onAboutClick" />
-</LinearLayout>
 
+</LinearLayout>
+</LinearLayout>
