--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,86 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/tabhost"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-	android:textStyle="bold"
-	android:textSize="10pt"
-    android:text="@string/title"
-    />
-
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-	android:textSize="8pt"
-    android:text="@string/Description"
-    />
-
-<LinearLayout
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-	android:weightSum="6"
-	android:gravity="center"
-    >
-
-<Button
-    android:id="@+id/CreateCheckInButton"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-	android:layout_weight="1"
-	android:textSize="10pt"
-    android:text="@string/CreateCheckInButtonText"
-    android:onClick="onCreateShortcutClick" />
-
-<Button
-    android:id="@+id/CreateListButton"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-	android:layout_weight="1"
-	android:textSize="10pt"
-    android:text="@string/CreateListButtonText"
-    android:onClick="onCreateShortcutClick" />
-
-<Button
-    android:id="@+id/CreateHistoryButton"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-	android:layout_weight="1"
-	android:textSize="10pt"
-    android:text="@string/CreateHistoryButtonText"
-    android:onClick="onCreateShortcutClick" />
-
-<Button
-    android:id="@+id/CreatePlacesButton"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-	android:layout_weight="1"
-	android:textSize="10pt"
-    android:text="@string/CreatePlacesButtonText"
-    android:onClick="onCreateShortcutClick" />
-
-<Button
-    android:id="@+id/CreateAllButton"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-	android:layout_weight="1"
-	android:textSize="10pt"
-    android:text="@string/CreateAllButtonText"
-    android:onClick="onCreateAllClick" />
-
-<Button
-    android:id="@+id/AboutButton"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-	android:layout_weight="1"
-	android:textSize="10pt"
-    android:text="@string/about"
-    android:onClick="onAboutClick" />
-
-</LinearLayout>
-</LinearLayout>
+    android:layout_height="fill_parent">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        <TabWidget
+            android:id="@android:id/tabs"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"/>
+    </LinearLayout>
+</TabHost>
